tests/machine/x/pascal/group_by_left_join.error
line: 78
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/group_by_left_join.pas
group_by_left_join.pas(42,16) Error: Illegal type conversion: "{Array Of Const/Constant Open} Array of TFPGMap$2$crcA49C6E68" to "TArray$1$crc7ED07D64"
group_by_left_join.pas(52,13) Error: Illegal type conversion: "{Array Of Const/Constant Open} Array of TFPGMap$2$crcDFB44C97" to "TArray$1$crc09D74DF2"
group_by_left_join.pas(54,30) Error: Identifier not found "g"
group_by_left_join.pas(56,12) Error: Identifier not found "g"
group_by_left_join.pas(58,17) Error: Illegal qualifier
group_by_left_join.pas(56,12) Error: Cannot find an enumerator for the type "<erroneous type>"
group_by_left_join.pas(65,11) Error: Identifier not found "o"
group_by_left_join.pas(67,20) Error: Identifier not found "o"
group_by_left_join.pas(67,37) Error: identifier idents no member "id"
group_by_left_join.pas(68,41) Error: Incompatible types: got "{Array Of Const/Constant Open} Array of TFPGMap$2$crcA49C6E68" expected "TArray$1$crc7ED07D64"
group_by_left_join.pas(68,35) Error: Incompatible types: got "TFPGMap<System.Variant,System.Variant>" expected "TFPGMap<System.ShortString,System.Variant>"
group_by_left_join.pas(75,17) Error: identifier idents no member "name"
group_by_left_join.pas(78) Fatal: There were 12 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

